--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 header{
@@ -51,6 +51,7 @@ header{
     border-radius: 5px;
     height: 30px;
     color: grey;
+    font-weight: 300;
     margin: 0px 5px;
 }
 
@@ -66,3 +67,51 @@ header{
     top: 2px;
 }
 /* FINE NAV LEFT */
+
+/* NAV MAIN */
+.nav-main i{
+    font-size: 25px;
+    color: grey;
+}
+
+p{
+    font-weight: 300;
+    color: grey;
+}
+
+.nav-main{
+    justify-content: space-between;
+    width: 40%;
+}
+/* FINE NAV MAIN */
+
+.account{
+    background-color: #53ae98;
+    padding: 10px;
+    font-size: 25px;
+    margin-right: 20px;
+    border-radius: 10px;
+    color: #fff;
+    
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main{
+    width: 100%;
+    height: calc(100vh - 100px);
+    position: relative;
+}
+
+.settings{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.fas.fa-cog{
+    color: grey;
+}
